更新MOD；更新启动脚本